フィードバックを反映

--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -23,7 +23,7 @@
             <nav class="seealso">
                 {{ partial "related" .}}
             </nav>
-            <nav class="nextpage">{{- partial "nextpage" . -}}</nav>
+            <!-- <nav class="nextpage">{{- partial "nextpage" . -}}</nav> -->
         </div>
         {{- partial "enquete" . -}}
     </div>
