--- a/layouts/shortcodes/warning.html
+++ b/layouts/shortcodes/warning.html
@@ -1,4 +1,9 @@
 <aside class="admonition warning">
-  <i class="fas fa-exclamation-circle"></i>
-  {{ printf "%s" .Inner | markdownify }}
+  <div class="admonition-alt">
+    <i class="fas fa-exclamation-circle"></i>
+    {{ if eq $.Site.Params.LanguageName "日本語" }}<span>注意</span>{{ end }}
+    {{ if eq $.Site.Params.LanguageName "英語" }}<span>Caution</span>{{ end }}
+    {{ if eq $.Site.Params.LanguageName "中文(简体)" }}<span>注意</span>{{ end }}
+  </div>
+  <div class="admonition-content">{{ printf "%s" .Inner | markdownify }}</div>
 </aside>
