--- a/static/stylesheets/application.css
+++ b/static/stylesheets/application.css
@@ -196,7 +196,7 @@ body{position:relative;min-height:calc(100% - 56px);}
 }
 .article blockquote{border-left:2px solid rgba(0,0,0,.54);color:rgba(0,0,0,.54);padding-left:16px;}
 .article .admonition {
-  padding: 18px 18px 18px 60px;
+  /*padding: 18px 18px 3px 18px;*/
   margin: 21px 0;
   position: relative;
 }
@@ -207,14 +207,26 @@ body{position:relative;min-height:calc(100% - 56px);}
   background:#fcf8e3;
 }
 .article .admonition .fas {
-  font-size: 1.3em;
-  position: absolute;
+  /*font-size: 1rem;*/
+/*  position: absolute;
   left: 21px;
   top: 21px;
+*/}
+.article .admonition .admonition-alt {
+  font-size: 1rem;
+  background: #fff;
+  display: inline-block;
+  padding: 3px 15px;
+  border-radius: 25px;
+  margin-left: 12px;
+  margin-top: 12px;
+}
+.article .admonition .admonition-content {
+  padding: 18px 18px 12px 18px;
 }
 .article .admonition .admonition-title {
-  font-size: 1.3em;
-  margin: 5px 0 9px;
+  font-size: 1.3rem;
+  margin-bottom: 9px;
   padding-top: 0;
 }
 
@@ -364,6 +376,10 @@ ul.breadcrumbs {
     /*line-height: 13px;*/
     margin-left: 1060px;
     font-size: .95rem;
+}
+#sidebar-toc .tocTitle {
+  font-size: 1.2rem;
+  margin-bottom: 6px;
 }
 
 #TableOfContents li {
