--- a/static/stylesheets/application.css
+++ b/static/stylesheets/application.css
@@ -196,33 +196,38 @@ body{position:relative;min-height:calc(100% - 56px);}
 }
 .article blockquote{border-left:2px solid rgba(0,0,0,.54);color:rgba(0,0,0,.54);padding-left:16px;}
 .article .admonition {
-  /*padding: 18px 18px 3px 18px;*/
+  padding: 18px 18px 12px 18px;
   margin: 21px 0;
   position: relative;
 }
 .article .admonition.note {
-  background:#EAF3FF;
+  /*background:#EAF3FF;*/
+  border: 1px solid #86b3e0;
+}
+.article .admonition.note .fas{
+  color: #4496d3;
 }
 .article .admonition.warning {
-  background:#fcf8e3;
+  /*background:#fcf8e3;*/
+  border: 1px solid #f39b50;
 }
-.article .admonition .fas {
-  /*font-size: 1rem;*/
-/*  position: absolute;
-  left: 21px;
-  top: 21px;
-*/}
+.article .admonition.warning .fas{
+  color: #ed6c00;
+}
 .article .admonition .admonition-alt {
   font-size: 1rem;
-  background: #fff;
-  display: inline-block;
-  padding: 3px 15px;
-  border-radius: 25px;
-  margin-left: 12px;
-  margin-top: 12px;
+  margin-bottom: 12px;
+  /*background: #fff;*/
+  /*display: inline-block;*/
+  /*padding: 0px 15px;*/
+  /*border-radius: 25px;*/
+  /*margin-left: 0px;*/
+  /*margin-top: 12px;*/
+  /*border-bottom: 1px solid #f39b50;*/
+
 }
 .article .admonition .admonition-content {
-  padding: 18px 18px 12px 18px;
+  /*padding: 18px 18px 12px 18px;*/
 }
 .article .admonition .admonition-title {
   font-size: 1.3rem;
