--- a/static/stylesheets/application.css
+++ b/static/stylesheets/application.css
@@ -167,7 +167,6 @@ body{position:relative;min-height:calc(100% - 56px);}
 .article a, .nfarticle a {
   color: #0d7b91;
   text-decoration:underline;
-  /*border-bottom:1px dotted;*/
   line-height: 1.5em;
 }
 .article code{background:#eee}
@@ -201,7 +200,6 @@ body{position:relative;min-height:calc(100% - 56px);}
   position: relative;
 }
 .article .admonition.note {
-  /*background:#EAF3FF;*/
   border-top: 1px solid #86b3e0;
   border-bottom: 1px solid #86b3e0;
 }
@@ -209,7 +207,6 @@ body{position:relative;min-height:calc(100% - 56px);}
   color: #4496d3;
 }
 .article .admonition.warning {
-  /*background:#fcf8e3;*/
   border-top: 1px solid #f39b50;
   border-bottom: 1px solid #f39b50;
 }
@@ -219,17 +216,7 @@ body{position:relative;min-height:calc(100% - 56px);}
 .article .admonition .admonition-alt {
   font-size: 1rem;
   margin-bottom: 18px;
-  /*background: #fff;*/
-  /*display: inline-block;*/
-  /*padding: 0px 15px;*/
-  /*border-radius: 25px;*/
-  /*margin-left: 0px;*/
-  /*margin-top: 12px;*/
-  /*border-bottom: 1px solid #f39b50;*/
-
-}
-.article .admonition .admonition-content {
-  /*padding: 18px 18px 12px 18px;*/
+  font-weight: bold;
 }
 .article .admonition .admonition-title {
   font-size: 1rem;
