aria-current属性の追加

--- a/layouts/_default/section.html
+++ b/layouts/_default/section.html
@@ -14,7 +14,7 @@
     <div class="article">
         <div class="wrapper">
             <nav class="breadcrumb">{{- partial "breadcrumb" . -}}</nav>
-            <main>
+            <main id="main">
                 <article>
                     <h1>{{ partial "title" . }}</h1>
                     {{ .Content }}
