--- a/layouts/partials/nav.html
+++ b/layouts/partials/nav.html
@@ -18,7 +18,12 @@
             {{- if in .Params.disabled .Site.Params.TargetRegion}}
             {{- else}}
         <li>
-            <div class="category"><a href="{{ .RelPermalink}}" class="{{- if eq .RelPermalink $target.RelPermalink}} current{{end}}{{- if .IsAncestor $target}} expand{{end}}">
+            <div class="category">
+            {{- if eq .RelPermalink $target.RelPermalink}}
+            <a href="#main" class="current{{- if .IsAncestor $target}} expand{{end}}">
+            {{ else }}
+            <a href="{{ .RelPermalink}}" class="{{- if .IsAncestor $target}}expand{{end}}">
+            {{ end -}}
             <span>{{- partial "title" . -}}</span></a><i class="fa fa-chevron-right expand-button {{- if .IsAncestor $target}} expand{{end}}" aria-hidden="true"></i></div>
                 {{- if ne $numberOfPages 0 }}
             <ul class="{{- if .IsAncestor $target}}opened{{end}}">
@@ -39,7 +44,11 @@
             {{- if in .Params.disabled .Site.Params.TargetRegion}}
             {{- else}}
             <li>
-               <a href="{{ .RelPermalink}}" class="{{- if eq .RelPermalink $target.RelPermalink}} current{{end -}}">{{ partial "title" .}}</a>
+                {{- if eq .RelPermalink $target.RelPermalink}}
+                <a href="#main" class="current" aria-current="page">{{ partial "title" .}}</a>
+                {{ else }}
+                <a href="{{ .RelPermalink}}">{{ partial "title" .}}</a>
+                {{ end -}}
             </li>
             {{- end}}
         {{- end}}
