--- a/static/stylesheets/application.css
+++ b/static/stylesheets/application.css
@@ -561,10 +561,21 @@ ul.breadcrumbs {
     font-size: 1em;
 }
 
-.nfarticle .nftitle{
+.nftitle{
   font-size: 3rem;
   line-height: 1.5;
-  margin: 30px 0;
+  margin: 56px 0 30px 0;
+  background: radial-gradient(circle farthest-corner at left bottom, #e94f90 0%, rgba(233, 79, 144, .01) 100%), radial-gradient(circle farthest-corner at right bottom, #287bf4 0%, rgba(40, 123, 244, .01) 100%);
+}
+.nftitle > h1 {
+  width: 1300px;
+  margin: 0 auto;
+  font-size: 2.1rem;
+  padding: 112px 0;
+  color: #fff;
+}
+.nflink {
+  margin-top: 1rem;
 }
 @media only screen and (max-width:800px) {
     #langselector{display:none;}
