--- a/static/stylesheets/application.css
+++ b/static/stylesheets/application.css
@@ -498,7 +498,7 @@ ul.breadcrumbs {
   padding: 9px;
   background-color: rgba(9,17,38,0.7);
   color: #fff;
-  text-align: center;
+  /*text-align: center;*/
   position: fixed;
   bottom: 0;
   z-index: 100;
@@ -545,13 +545,13 @@ ul.breadcrumbs {
 #additionnalEnquate_textArea {
   width: 100%;
   height: 39px;
-  margin-top: 3px;
+  margin-top: 9px;
 }
 #additionnalEnquate_countChar {
   float: right;
 }
 #enquete_note {
-  margin: 22px 0;
+  margin: 2rem 0;
 }
 #enqueteThanks {
   height: 27px;
