表の罫線の色を調整

--- a/static/stylesheets/application.css
+++ b/static/stylesheets/application.css
@@ -175,21 +175,21 @@ body{position:relative;min-height:calc(100% - 56px);}
 }
 .article table {
   border-collapse: collapse;
-  border-left: 2px solid #a7a5a6;
-  border-top: 2px solid #a7a5a6;
+  border-left: 2px solid #c2bfc0;
+  border-top: 2px solid #c2bfc0;
   /*border-right: 1px solid #a7a5a6;*/
 }
 .article table th{
   padding: .6em;
-  border-right: 2px solid #a7a5a6;
-  border-bottom: 2px solid #a7a5a6;
+  border-right: 2px solid #c2bfc0;
+  border-bottom: 2px solid #c2bfc0;
   background:#f6f6f6;
   font-weight: bold;
 }
 .article table td{
   padding: .6em;
-  border-right: 2px solid #a7a5a6;
-  border-bottom: 2px solid #a7a5a6;
+  border-right: 2px solid #c2bfc0;
+  border-bottom: 2px solid #c2bfc0;
   vertical-align: top;
   background:#fff;
 }
