captionが途中で改行されないように変更

--- a/static/stylesheets/application.css
+++ b/static/stylesheets/application.css
@@ -273,7 +273,7 @@ body{position:relative;min-height:calc(100% - 56px);}
 .article pre{padding:16px;margin:1.5em -16px 0;line-height:1.5em;overflow:auto;-webkit-overflow-scrolling:touch}
 .article table{margin:21px 0;overflow:hidden;}
 .article table th{text-align:left;}
-.article caption{text-align: left; font-weight: bold; font-size: 1.1rem;line-height: 2em;}
+.article caption{text-align: left; font-weight: bold; font-size: 1.1rem;line-height: 2em;word-break: keep-all;}
 .article img{max-width:100%}
 .article img.screenchot {
   margin: 21px 0;
