--- a/layouts/shortcodes/tile.html
+++ b/layouts/shortcodes/tile.html
@@ -11,5 +11,5 @@
             {{- end -}}
         </div>
             {{- if (.Get "img_src") -}}<img class="tile-img" src="{{- .Get "img_src" -}}" alt="{{- .Get "img_alt" -}}"></img>{{- end -}}
-            {{- if (.Get "fontawesome_icon") -}}<i class="fas {{ .Get "fontawesome_icon" }}"{{- if (.Get "fontawesome_color") -}} style="color:{{ .Get "fontawesome_color" }};"{{- end -}}></i>{{- end -}}
+            {{- if (.Get "fontawesome_icon") -}}<i class="{{ .Get "fontawesome_icon" }}"{{- if (.Get "fontawesome_color") -}} style="color:{{ .Get "fontawesome_color" }};"{{- end -}}></i>{{- end -}}
 </div>
