--- a/static/stylesheets/application.css
+++ b/static/stylesheets/application.css
@@ -230,11 +230,11 @@ body{position:relative;min-height:calc(100% - 56px);}
   position: relative;
 }
 .article h1{font-size:2.4rem;line-height:1.2em;margin-bottom:30px;padding-top: 66px;font-weight: 700;}
-.article h2{font-size:2.1rem;line-height:1.2em;margin-bottom:24px;padding-top: 66px;}
-.article h3{font-size:1.6rem;line-height:1.2em;margin-bottom:15px;padding-top: 66px;}
-.article h4{font-size:1.3rem;line-height:1.2em;margin-bottom:12px;padding-top: 66px;}
-.article h5{font-size:1.1rem;line-height:1.2em;margin-bottom:10px;padding-top: 24px;}
-.article h6{font-size:1.0rem;line-height:1.2em;margin-bottom:10px;padding-top: 18px;font-weight: 700;}
+.article h2{font-size:2.1rem;line-height:1.2em;margin-bottom:24px;margin-top: -24px;padding-top: 66px;}
+.article h3{font-size:1.6rem;line-height:1.2em;margin-bottom:15px;margin-top: -36px;padding-top: 66px;}
+.article h4{font-size:1.4rem;line-height:1.2em;margin-bottom:12px;margin-top: -36px;padding-top: 66px;}
+.article h5{font-size:1.2rem;line-height:1.2em;margin-bottom:10px;margin-top: -42px;padding-top: 66px;font-weight: 700;}
+.article h6{font-size:1.0rem;line-height:1.2em;margin-bottom:10px;margin-top: -48px;padding-top: 66px;font-weight: 700;}
 .article ol{margin: 30px 0;}
 .article p,.article ul{margin-bottom:.9em;}
 .article ul {
