--- a/static/stylesheets/home.css
+++ b/static/stylesheets/home.css
@@ -118,7 +118,7 @@
 }*/
 
 .tile-title {
-  font-size: 1.8rem;
+  font-size: 1.4rem;
   line-height: 1.2;
   position: relative;
   z-index: 1;
@@ -233,10 +233,20 @@
   font-size: 1.2rem;
 }
 
+@media (min-width: 1100px) {
+  .tile-title {
+     font-size:1.55rem;
+   }
+ }
 @media only screen and (max-width:1100px) {
   .col-tile {
     width: 46.8%;
     margin: 0 1.6% 16px;
+  }
+}
+@media (min-width: 599px) and (max-width: 1099px){
+  .tile-title {
+    font-size: calc(1.1rem + ((1vw - 0.3rem) * 2.5444));
   }
 }
 @media only screen and (max-width:1000px) {
