--- a/static/stylesheets/home.css
+++ b/static/stylesheets/home.css
@@ -175,12 +175,14 @@
     margin: 0;
 }
 .article .col-tile ol>li {
-  list-style: decimal;
-  padding: 0;
-  margin: 0 0 0 2rem;
-  margin-bottom: .4rem;
-  text-overflow: ellipsis;
-  white-space: nowrap;
+    list-style: decimal;
+    list-style-position:inside;
+    padding: 0;
+    margin: 0;
+    margin-bottom: .4rem;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
 }
 .article .col-tile ol>li:before {
   content: none;
