--- a/static/stylesheets/home.css
+++ b/static/stylesheets/home.css
@@ -179,8 +179,6 @@
   padding: 0;
   margin: 0 0 0 2rem;
   margin-bottom: .4rem;
-  text-overflow: ellipsis;
-  white-space: nowrap;
 }
 .article .col-tile ol>li:before {
   content: none;
@@ -191,6 +189,12 @@
   padding: .1em 1px;
   line-height: 1.5em;
   padding-top: 0px;
+}
+.hotArticle li a {
+  overflow: hidden;
+  text-overflow: ellipsis;
+  display: block;
+  white-space: nowrap;
 }
 #hotArticles-showMore {
   /*padding: 2px;*/
