--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -8,9 +8,11 @@
     {{ partial "header" . }}
 </header>
 <div class="main">
-    <nav class="drawer">
-        {{ partial "drawer" . }}
-    </nav>
+    <div class="wrap_drawer">
+        <nav class="drawer">
+            {{ partial "drawer" . }}
+        </nav>
+    </div>
     <div class="article">
         <div class="wrapper">
             <nav class="breadcrumb">{{- partial "breadcrumb" . -}}</nav>
@@ -27,11 +29,13 @@
         </div>
         {{- partial "enquete" . -}}
     </div>
-    <nav id="sidebar-toc">
-        {{if eq .Lang "ja" }}<h2 class="tocTitle">この記事の内容</h2>{{ end }}
-        {{if eq .Lang "en" }}<h2 class="tocTitle">In this article</h2>{{ end }}
-        {{if eq .Lang "zh" }}<h2 class="tocTitle">本文内容</h2>{{ end }}
-    </nav>
+    <div class="wrap_sidebar">
+        <nav id="sidebar-toc">
+            {{if eq .Lang "ja" }}<h2 class="tocTitle">この記事の内容</h2>{{ end }}
+            {{if eq .Lang "en" }}<h2 class="tocTitle">In this article</h2>{{ end }}
+            {{if eq .Lang "zh" }}<h2 class="tocTitle">本文内容</h2>{{ end }}
+        </nav>
+    </div>
 </div>
 <footer class="footer">
     {{ partial "footer" . }}
