--- a/static/stylesheets/application.css
+++ b/static/stylesheets/application.css
@@ -159,7 +159,7 @@ body{position:relative;min-height:calc(100% - 56px);}
 .main{display:flex;max-width:1300px;margin:56px auto 0 auto;}
 .drawer{
   height:calc(100% - 56px);
-  overflow:auto; width:280px;
+  overflow:auto;
   line-height: 1.2em;
   border-right: 1px solid #e6e6e6;
   font-size: .95rem;
@@ -363,19 +363,17 @@ ul.breadcrumbs {
   display: inline;
   margin-left: 0px;
 }
-
 #sidebar-toc {
-    display: none;
-    position: fixed;
-    width: 200px;
-    height: 100%;
-    padding-top: 48px;
-    overflow: auto;
-    /*line-height: 13px;*/
-    margin-left: 1060px;
-    font-size: .95rem;
+  position: fixed;
+  width: 200px;
+  padding-top: 48px;
+  height: 100%;
+  overflow: auto;
+  /*line-height: 13px;*/
+  font-size: .95rem;
 }
 #sidebar-toc .tocTitle {
+  display: none;
   font-size: 1.2rem;
   margin-bottom: 6px;
 }
@@ -595,15 +593,16 @@ ul.breadcrumbs {
     }
     /*#footercenter {flex-direction: column;}*/
 }
-@media only screen and (min-width:960px) {
+@media only screen and (min-width:1060px) {
     .main { flex-direction: row; }
-    .article { width: 780px; margin-left: 280px;}
+    .article { width: 780px;}
     .drawer { width: 280px; position:fixed; padding-bottom: 100px}
+    .wrap_drawer { width: 280px;}
 }
-@media only screen and (max-width:959px) {
+@media only screen and (max-width:1059px) {
     .main { flex-direction: column-reverse; flex-wrap: wrap;}
     /*.article { background-color: #ffffff;}*/
-    .drawer {position: relative; width: 100%; padding-top:0px;padding-bottom:30px; background-color: #f6f6f6; z-index: 1;}
+    .drawer {position: relative; width: auto; padding-top:0px;padding-bottom:30px; background-color: #f6f6f6; z-index: 1;}
     .previous, .next{display: none;}
     #footercopyright {float: left;}
 }
