--- a/static/stylesheets/home.css
+++ b/static/stylesheets/home.css
@@ -171,7 +171,7 @@
 .article h1,.article h2,.article h3,.article h4,.article h5,.article h6 {
   clear: both;
 }
-.article ol,.article p,{
+.article ol,.article p{
     margin: 0;
 }
 .article ul li {
