tocのフォントサイズを変更

--- a/static/stylesheets/application.css
+++ b/static/stylesheets/application.css
@@ -393,6 +393,7 @@ ul.breadcrumbs {
    display: block;
    padding: 5px 10px;
    line-height: 1.3rem;
+   font-size: .875rem;
 }
 
 #TableOfContents a.current {
