--- a/static/stylesheets/application.css
+++ b/static/stylesheets/application.css
@@ -228,11 +228,16 @@ body{position:relative;min-height:calc(100% - 56px);}
   padding-top: 0;
 }
 
-@media only screen and (min-width:800px) {
 .article .wrapper{
-    padding-right:32px;
-    padding-left: 32px
+  padding:0px 32px 92px;
+  margin-top: 18px;
+  position: relative
 }
+@media only screen and (max-width:800px) {
+  .article .wrapper{
+    padding-right:16px;
+    padding-left: 16px
+  }
 }
 .article h1{font-size:2.4rem;line-height:1.2em;margin-bottom:30px;padding-top: 66px;font-weight: 700;}
 .article h2{font-size:2.1rem;line-height:1.2em;margin-bottom:24px;margin-top: -24px;padding-top: 66px;}
