--- a/layouts/shortcodes/note.html
+++ b/layouts/shortcodes/note.html
@@ -3,7 +3,7 @@
     <i class="fas fa-check"></i>
     {{ if eq $.Site.Params.LanguageName "日本語" }}<span>補足</span>{{ end }}
     {{ if eq $.Site.Params.LanguageName "英語" }}<span>Note</span>{{ end }}
-    {{ if eq $.Site.Params.LanguageName "中文(简体)" }}<span>補足</span>{{ end }}
+    {{ if eq $.Site.Params.LanguageName "中文(简体)" }}<span>补充</span>{{ end }}
   </div>
   <div class="admonition-content">{{ printf "%s" .Inner | markdownify }}</div>
 </aside>
