--- a/static/stylesheets/application.css
+++ b/static/stylesheets/application.css
@@ -265,7 +265,7 @@ body{position:relative;min-height:calc(100% - 56px);}
   counter-increment: li;
   position: absolute;
   height: 100%;
-/*  width: 30px;*/
+  width: 45px;
   top: 0;
   left: 0;
   padding-right:10px;
