2階層目以降の番号付き手順のスタイルを変更

--- a/static/stylesheets/application.css
+++ b/static/stylesheets/application.css
@@ -279,7 +279,7 @@ body{position:relative;min-height:calc(100% - 56px);}
   text-align: right;
   border-right: 1px solid #e6e6e6;
 }
-.article ol>li:before {
+.article ol>li>ol>li:before {
   font-size: 1.3rem;
 }
 
