--- a/layouts/shortcodes/note.html
+++ b/layouts/shortcodes/note.html
@@ -2,7 +2,7 @@
   <div class="admonition-alt">
     <i class="fas fa-check"></i>
     {{ if eq $.Site.Params.LanguageName "日本語" }}<span>補足</span>{{ end }}
-    {{ if eq $.Site.Params.LanguageName "英語" }}<span>Note</span>{{ end }}
+    {{ if eq $.Site.Params.LanguageName "English" }}<span>Note</span>{{ end }}
     {{ if eq $.Site.Params.LanguageName "中文(简体)" }}<span>补充</span>{{ end }}
   </div>
   <div class="admonition-content">{{ printf "%s" .Inner | markdownify }}</div>
